--- a/content/docs/en/swagger.mdx
+++ b/content/docs/en/swagger.mdx
@@ -1,17 +1,17 @@
 ---
 title: Swagger / OpenAPI
-description: Complete API documentation with modern interactive interface
+description: Complete API documentation with a modern and interactive interface
 ---
 
 # Swagger / OpenAPI 3.0
 
-AzuraJS includes complete support for API documentation using Swagger/OpenAPI 3.0, with a modern dark mode interface and integrated "Try It Out" functionality.
+AzuraJS includes full support for API documentation using Swagger/OpenAPI 3.0, featuring a modern dark mode interface and built-in **Try It Out** functionality.
 
-> **Note:** AzuraJS's Swagger system automatically generates OpenAPI 3.0 documentation from your controllers and decorators, without manual configuration.
+> **Note:** AzuraJS Swagger automatically generates OpenAPI 3.0 documentation from your controllers and decorators, with no manual configuration required.
 
 ## Installation
 
-Swagger is already included in AzuraJS. Just import from the `azurajs/swagger` submodule:
+Swagger is already included in AzuraJS. Just import it from the `azurajs/swagger` submodule:
 
 ```typescript
 import { setupSwaggerWithControllers } from "azurajs/swagger";
@@ -19,81 +19,150 @@ import { setupSwaggerWithControllers } from "azurajs/swagger";
 
 ## Quick Setup
 
-The simplest way to add Swagger to your application is with one line:
+The easiest way to add Swagger to your application is with a single setup call:
 
 ```typescript
 import { AzuraClient } from "azurajs";
 import { setupSwaggerWithControllers } from "azurajs/swagger";
-import { UserController } from "./controllers/UserController";
-
-const app = new AzuraClient();
-
-// One line to configure everything!
-setupSwaggerWithControllers(app, {
-  title: "My API",
-  description: "API documentation",
-  version: "1.0.0"
-}, [UserController]);
-
-app.listen();
-```
-
-> **Access documentation at:**
-> - **Interactive UI:** `http://localhost:3000/docs`
-> - **OpenAPI JSON:** `http://localhost:3000/api-spec.json`
-
-## Documentation Decorators
-
-### @Swagger() - New Simplified API ⭐
-
-The `@Swagger` decorator unifies **all** documentation in a single place, making it much easier and more intuitive to document your APIs:
-
-```typescript
-import { Controller, Get, Post } from "azurajs/decorators";
-import { Swagger } from "azurajs/swagger";
+import { Controller, Get, Post, Req, Res } from "azurajs/decorators";
 
 @Controller("/users")
 class UserController {
+  private users = [
+    { id: "1", name: "Alice", email: "alice@example.com" },
+    { id: "2", name: "Bob", email: "bob@example.com" },
+  ];
+
+  @Get("/")
+  async listUsers(@Req() req, @Res() res) {
+    const page = Number(req.query.page) || 1;
+    const limit = Number(req.query.limit) || 10;
+    const start = (page - 1) * limit;
+    const items = this.users.slice(start, start + limit);
+    res.json({ items, total: this.users.length, page });
+  }
+
+  @Get("/:id")
+  async getUser(@Req() req, @Res() res) {
+    const user = this.users.find((u) => u.id === req.params.id);
+    if (!user) return res.status(404).json({ error: "User not found" });
+    res.json(user);
+  }
+
+  @Post("/")
+  async createUser(@Req() req, @Res() res) {
+    const { name, email } = req.body;
+    if (!name || !email) {
+      return res.status(400).json({ error: "name and email are required" });
+    }
+    const user = { id: String(Date.now()), name, email };
+    this.users.push(user);
+    res.status(201).json(user);
+  }
+}
+
+const app = new AzuraClient();
+
+setupSwaggerWithControllers(
+  app,
+  {
+    title: "My API",
+    description: "API documentation",
+    version: "1.0.0",
+  },
+  [UserController]
+);
+
+await app.listen(3000);
+```
+
+**Access the documentation at:**
+
+- **Interactive UI:** `http://localhost:3000/docs`
+- **OpenAPI JSON:** `http://localhost:3000/api-spec.json`
+
+## Documentation Decorators
+
+### @Swagger() – New Simplified API ⭐
+
+The `@Swagger` decorator centralizes **all** documentation in one place, making your API docs easier to read and maintain:
+
+```typescript
+import { AzuraClient } from "azurajs";
+import { Controller, Get, Post, Req, Res } from "azurajs/decorators";
+import { Swagger, setupSwaggerWithControllers } from "azurajs/swagger";
+
+@Controller("/products")
+class ProductController {
+  private products = [
+    { id: "p1", name: "Laptop", price: 1299.99 },
+    { id: "p2", name: "Mouse", price: 29.99 },
+  ];
+
+  @Get("/")
+  @Swagger({
+    summary: "List products",
+    description: "Returns a paginated list of products",
+    tags: ["Products"],
+    parameters: [
+      { name: "page", in: "query", schema: { type: "number" }, example: 1 },
+      { name: "limit", in: "query", schema: { type: "number" }, example: 10 },
+    ],
+    responses: {
+      200: {
+        description: "Product list",
+        example: [
+          { id: "p1", name: "Laptop", price: 1299.99 },
+          { id: "p2", name: "Mouse", price: 29.99 },
+        ],
+      },
+    },
+  })
+  async list(@Req() req, @Res() res) {
+    const page = Number(req.query.page) || 1;
+    const limit = Number(req.query.limit) || 10;
+    const items = this.products.slice((page - 1) * limit, page * limit);
+    res.json(items);
+  }
+
   @Get("/:id")
   @Swagger({
-    summary: "Get user by ID",
-    description: "Retrieve detailed information about a specific user",
-    tags: ["Users"],
+    summary: "Get product by ID",
+    description: "Returns detailed information about a product",
+    tags: ["Products"],
     parameters: [
       {
         name: "id",
         in: "path",
-        description: "User ID",
+        description: "Product ID",
         required: true,
         schema: { type: "string" },
-        example: "123"
-      }
+        example: "p1",
+      },
     ],
     responses: {
       200: {
-        description: "User found",
-        example: { 
-          id: "123", 
-          name: "John Doe",
-          email: "john@example.com"
-        }
+        description: "Product found",
+        example: { id: "p1", name: "Laptop", price: 1299.99 },
       },
       404: {
-        description: "User not found",
-        example: { error: "User not found" }
-      }
-    }
+        description: "Product not found",
+        example: { error: "Product not found" },
+      },
+    },
   })
-  async getUser(@Req() req, @Res() res) {
-    res.json({ id: req.params.id, name: "John Doe" });
+  async get(@Req() req, @Res() res) {
+    const product = this.products.find((p) => p.id === req.params.id);
+    if (!product) return res.status(404).json({ error: "Product not found" });
+    res.json(product);
   }
 
   @Post("/")
   @Swagger({
-    summary: "Create new user",
-    tags: ["Users"],
+    summary: "Create product",
+    tags: ["Products"],
     requestBody: {
-      description: "User data",
+      description: "Product data",
       required: true,
       content: {
         "application/json": {
@@ -101,606 +170,148 @@ class UserController {
             type: "object",
             properties: {
               name: { type: "string" },
-              email: { type: "string", format: "email" }
+              price: { type: "number" },
             },
-            required: ["name", "email"]
+            required: ["name", "price"],
           },
-          example: {
-            name: "Jane Doe",
-            email: "jane@example.com"
-          }
-        }
-      }
+          example: { name: "Keyboard", price: 79.99 },
+        },
+      },
     },
     responses: {
       201: {
-        description: "User created successfully",
-        example: { 
-          id: 456, 
-          name: "Jane Doe",
-          email: "jane@example.com"
-        }
+        description: "Product created",
+        example: { id: "p3", name: "Keyboard", price: 79.99 },
       },
       400: {
         description: "Invalid data",
-        example: { error: "Invalid data" }
-      }
-    }
+        example: { error: "Invalid data" },
+      },
+    },
   })
-  async createUser(@Req() req, @Res() res) {
-    res.status(201).json(req.body);
+  async create(@Req() req, @Res() res) {
+    const { name, price } = req.body;
+    if (!name || typeof price !== "number") {
+      return res.status(400).json({ error: "Invalid data" });
+    }
+    const newProduct = { id: `p${Date.now()}`, name, price };
+    this.products.push(newProduct);
+    res.status(201).json(newProduct);
   }
 }
+
+const app = new AzuraClient();
+
+setupSwaggerWithControllers(
+  app,
+  {
+    title: "Products API",
+    description: "Automatic documentation using decorators",
+    version: "1.0.0",
+    tags: [{ name: "Products", description: "Product management" }],
+  },
+  [ProductController]
+);
+
+await app.listen(3000);
 ```
 
-**Advantages of @Swagger:**
-- ✅ **All in one place** - No need to use multiple decorators
-- ✅ **More readable** - Grouped and organized configuration
-- ✅ **Less code** - Single declaration instead of 4-5 decorators
-- ✅ **TypeScript** - Autocomplete and type validation
-- ✅ **Integrated examples** - Define examples directly in responses
+**Advantages of `@Swagger`:**
+
+- ✅ Everything in one place
+- ✅ Cleaner and more readable
+- ✅ Less boilerplate
+- ✅ Full TypeScript support
+- ✅ Inline examples
 
 ---
 
 ### Individual Decorators (Traditional API)
 
-If you prefer more granularity, you can still use individual decorators:
-
 #### @ApiDoc()
 
-Documents basic endpoint information:
-
 ```typescript
-import { Controller, Get } from "azurajs/decorators";
+import { Controller, Get, Req, Res } from "azurajs/decorators";
 import { ApiDoc } from "azurajs/swagger";
 
-@Controller("/users")
-class UserController {
+@Controller("/profile")
+class ProfileController {
   @Get("/:id")
   @ApiDoc({
-    summary: "Get user by ID",
-    description: "Retrieve detailed information about a specific user"
+    summary: "Get profile by ID",
+    description: "Retrieve public profile information",
   })
-  async getUser(@Req() req, @Res() res) {
-    res.json({ id: req.params.id, name: "John Doe" });
+  async getProfile(@Req() req, @Res() res) {
+    const profiles = {
+      "1": { id: "1", displayName: "vinicius", bio: "Fullstack dev" },
+    };
+    const profile = profiles[req.params.id];
+    if (!profile) return res.status(404).json({ error: "Not found" });
+    res.json(profile);
   }
 }
 ```
 
 ### @ApiResponse()
 
-Defines possible endpoint responses:
-
 ```typescript
-@Get("/:id")
-@ApiResponse(200, "User found", {
-  example: { 
-    id: 1, 
-    name: "John Doe", 
-    email: "john@example.com" 
+import { Get } from "azurajs/decorators";
+import { ApiResponse } from "azurajs/swagger";
+
+class AccountController {
+  @Get("/account")
+  @ApiResponse(200, "User account", {
+    example: { id: "1", email: "user@example.com", plan: "pro" },
+  })
+  @ApiResponse(401, "Unauthorized", { example: { error: "Unauthorized" } })
+  async account(req, res) {
+    res.json({ id: "1", email: "user@example.com", plan: "pro" });
   }
-})
-@ApiResponse(404, "User not found", {
-  example: { error: "User not found" }
-})
-async getUser(@Req() req, @Res() res) {
-  // ...
 }
 ```
 
 ### @ApiParameter()
 
-Documents request parameters:
-
 ```typescript
-@Get("/:id")
-@ApiParameter("id", "path", {
-  description: "User ID",
-  required: true,
-  schema: { type: "integer" },
-  example: 123
-})
-async getUser(@Req() req, @Res() res) {
-  // ...
+import { Get } from "azurajs/decorators";
+import { ApiParameter } from "azurajs/swagger";
+
+class OrdersController {
+  @Get("/:orderId")
+  @ApiParameter("orderId", "path", {
+    description: "Order ID",
+    required: true,
+    schema: { type: "string" },
+    example: "ord_123",
+  })
+  async getOrder(req, res) {
+    const orders = { ord_123: { id: "ord_123", total: 199.9 } };
+    const order = orders[req.params.orderId];
+    if (!order) return res.status(404).json({ error: "Order not found" });
+    res.json(order);
+  }
 }
 ```
-
-**Parameter types:**
-- `path` - URL parameters (`/users/:id`)
-- `query` - Query strings (`/users?page=1`)
-- `header` - HTTP headers
-- `cookie` - Cookies
 
 ### @ApiBody()
 
-Documents request body:
-
 ```typescript
-@Post("/")
-@ApiBody({
-  description: "User data",
-  required: true,
-  example: {
-    name: "Jane Doe",
-    email: "jane@example.com",
-    age: 25
-  }
-})
-async createUser(@Req() req, @Res() res) {
-  res.status(201).json(req.body);
-}
-```
+import { Post } from "azurajs/decorators";
+import { ApiBody } from "azurajs/swagger";
 
-### @ApiTags()
-
-Organizes endpoints by tags:
-
-```typescript
-@Controller("/users")
-@ApiTags("Users")
-class UserController {
-  // All endpoints will have the "Users" tag
-}
-
-// Or on specific endpoints:
-@Get("/")
-@ApiTags("Users", "Public")
-async listUsers() {
-  // ...
-}
-```
-
-### @ApiSecurity()
-
-Specifies authentication requirements:
-
-```typescript
-@Get("/profile")
-@ApiSecurity("bearerAuth")
-async getProfile(@Req() req, @Res() res) {
-  // Protected endpoint
-}
-```
-
-**Configuring security schemes:**
-
-```typescript
-setupSwaggerWithControllers(app, {
-  title: "My API",
-  version: "1.0.0",
-  securitySchemes: {
-    bearerAuth: {
-      type: "http",
-      scheme: "bearer",
-      bearerFormat: "JWT"
-    },
-    apiKey: {
-      type: "apiKey",
-      in: "header",
-      name: "X-API-Key"
-    }
-  }
-}, [UserController]);
-```
-
-### @ApiDeprecated()
-
-Marks endpoints as deprecated:
-
-```typescript
-@Get("/old-endpoint")
-@ApiDeprecated()
-@ApiDoc({ summary: "Old endpoint (use /new-endpoint instead)" })
-async oldEndpoint(@Req() req, @Res() res) {
-  // ...
-}
-```
-
-## Plain JavaScript (Without Decorators)
-
-If you prefer pure JavaScript or don't want to use decorators, use the `addDoc()` method:
-
-```javascript
-import { AzuraClient } from "azurajs";
-import { setupSwagger, SwaggerGenerator } from "azurajs/swagger";
-
-const app = new AzuraClient();
-
-// Create Swagger generator
-const swagger = new SwaggerGenerator({
-  title: "Simple API",
-  description: "API documented the simple way",
-  version: "1.0.0",
-  tags: [
-    { name: "Users", description: "User management" },
-    { name: "Binary", description: "Encoding operations" }
-  ]
-});
-
-// GET route with query parameter
-app.get("/binary/encode", (req, res) => {
-  const text = req.query.q;
-  if (!text) {
-    return res.status(400).json({ error: "Query 'q' is required" });
-  }
-
-  const binary = text.split("").map(c => 
-    c.charCodeAt(0).toString(2).padStart(8, "0")
-  ).join("");
-
-  res.json({
-    input: text,
-    output: binary
-  });
-});
-
-// Document with addDoc() - EASY! ⭐
-swagger.addDoc({
-  method: "GET",
-  path: "/binary/encode",
-  summary: "Encode text to binary",
-  description: "Convert any text to binary representation",
-  tags: ["Binary"],
-  parameters: [
-    {
-      name: "q",
-      in: "query",
-      description: "Text to encode",
-      required: true,
-      schema: { type: "string" },
-      example: "Hello"
-    }
-  ],
-  responses: {
-    200: {
-      description: "Text encoded successfully",
-      example: {
-        input: "Hello",
-        output: "0100100001100101011011000110110001101111"
-      }
-    },
-    400: {
-      description: "Missing parameter",
-      example: { error: "Query 'q' is required" }
-    }
-  }
-});
-
-// POST route with body
-app.post("/users", (req, res) => {
-  const newUser = { id: Date.now(), ...req.body };
-  res.status(201).json(newUser);
-});
-
-swagger.addDoc({
-  method: "POST",
-  path: "/users",
-  summary: "Create new user",
-  tags: ["Users"],
-  requestBody: {
-    description: "User data",
-    required: true,
-    example: {
-      name: "John Smith",
-      email: "john@example.com"
-    }
-  },
-  responses: {
-    201: {
-      description: "User created",
-      example: {
-        id: 1234567890,
-        name: "John Smith",
-        email: "john@example.com"
-      }
-    }
-  }
-});
-
-// GET route with path parameter
-app.get("/users/:id", (req, res) => {
-  res.json({
-    id: req.params.id,
-    name: "John Doe",
-    email: "john@example.com"
-  });
-});
-
-swagger.addDoc({
-  method: "GET",
-  path: "/users/:id",
-  summary: "Get user by ID",
-  tags: ["Users"],
-  parameters: [
-    {
-      name: "id",
-      in: "path",
-      description: "User ID",
-      required: true,
-      schema: { type: "string" },
-      example: "123"
-    }
-  ],
-  responses: {
-    200: {
-      description: "User found",
-      example: {
-        id: "123",
-        name: "John Doe",
-        email: "john@example.com"
-      }
-    },
-    404: {
-      description: "User not found"
-    }
-  }
-});
-
-// Setup Swagger UI
-setupSwagger(app, swagger);
-
-app.listen(3000).then(() => {
-  console.log("🚀 Server: http://localhost:3000");
-  console.log("📚 Docs: http://localhost:3000/docs");
-});
-```
-
-**Advantages of `addDoc()`:**
-- ✅ **Pure JavaScript** - Works without TypeScript or decorators
-- ✅ **Simple** - Less verbose than SwaggerHelpers.createResponse
-- ✅ **Automatic** - Generates OpenAPI responses from examples
-- ✅ **Flexible** - Mix with traditional AzuraJS routes
-
----
-
-## Complete Example (TypeScript with Decorators)
-
-```typescript
-import { Controller, Get, Post, Put, Delete, Req, Res } from "azurajs/decorators";
-import { Swagger } from "azurajs/swagger";
-
-@Controller("/users")
-class UserController {
-  @Get("/")
-  @Swagger({
-    summary: "List all users",
-    tags: ["Users"],
-    parameters: [
-      {
-        name: "page",
-        in: "query",
-        schema: { type: "number" },
-        example: 1
-      },
-      {
-        name: "limit",
-        in: "query",
-        schema: { type: "number" },
-        example: 10
-      }
-    ],
-    responses: {
-      200: {
-        description: "User list",
-        example: [
-          { id: 1, name: "John Doe" },
-          { id: 2, name: "Jane Smith" }
-        ]
-      }
-    }
-  })
-  async listUsers(@Req() req, @Res() res) {
-    res.json([
-      { id: 1, name: "John Doe" },
-      { id: 2, name: "Jane Smith" }
-    ]);
-  }
-
-  @Get("/:id")
-  @Swagger({
-    summary: "Get user by ID",
-    tags: ["Users"],
-    parameters: [
-      {
-        name: "id",
-        in: "path",
-        required: true,
-        schema: { type: "string" },
-        example: "123"
-      }
-    ],
-    responses: {
-      200: {
-        description: "User found",
-        example: { id: "123", name: "John Doe", email: "john@example.com" }
-      },
-      404: {
-        description: "User not found"
-      }
-    }
-  })
-  async getUser(@Req() req, @Res() res) {
-    res.json({ id: req.params.id, name: "John Doe" });
-  }
-
-  @Post("/")
-  @Swagger({
-    summary: "Create new user",
-    tags: ["Users"],
-    requestBody: {
-      description: "User data",
-      required: true,
-      content: {
-        "application/json": {
-          schema: {
-            type: "object",
-            properties: {
-              name: { type: "string" },
-              email: { type: "string", format: "email" }
-            },
-            required: ["name", "email"]
-          },
-          example: {
-            name: "Jane Doe",
-            email: "jane@example.com"
-          }
-        }
-      }
-    },
-    responses: {
-      201: {
-        description: "User created",
-        example: { id: 123, name: "Jane Doe", email: "jane@example.com" }
-      }
-    }
-  })
-  async createUser(@Req() req, @Res() res) {
-    res.status(201).json(req.body);
-  }
-
-  @Delete("/:id")
-  @Swagger({
-    summary: "Delete user",
-    tags: ["Users"],
-    parameters: [
-      {
-        name: "id",
-        in: "path",
-        required: true,
-        schema: { type: "string" },
-        example: "123"
-      }
-    ],
-    responses: {
-      204: {
-        description: "User deleted"
-      },
-      404: {
-        description: "User not found"
-      }
-    }
-  })
-  async deleteUser(@Req() req, @Res() res) {
-    res.status(204).send();
-  }
-}
-```
-
----
-
-## Individual Decorators - Complete Example
-
-If you prefer using traditional decorators separately:
-
-```typescript
-import { 
-  ApiDoc, 
-  ApiResponse, 
-  ApiParameter, 
-  ApiBody, 
-  ApiTags 
-} from "azurajs/swagger";
-
-@Controller("/users")
-@ApiTags("Users")
-class UserController {
-  @Get("/")
-  @ApiDoc({
-    summary: "List all users",
-    description: "Retrieve a paginated list of users"
-  })
-  @ApiParameter("page", "query", {
-    description: "Page number",
-    schema: { type: "integer", default: 1 }
-  })
-  @ApiParameter("limit", "query", {
-    description: "Items per page",
-    schema: { type: "integer", default: 10 }
-  })
-  @ApiResponse(200, "Success", {
-    example: {
-      users: [
-        { id: 1, name: "John Doe" },
-        { id: 2, name: "Jane Doe" }
-      ],
-      total: 2,
-      page: 1
-    }
-  })
-  async listUsers(@Req() req, @Res() res) {
-    const page = req.query.page || 1;
-    const limit = req.query.limit || 10;
-    res.json({ users: [], total: 0, page });
-  }
-
-  @Get("/:id")
-  @ApiDoc({
-    summary: "Get user by ID",
-    description: "Retrieve detailed user information"
-  })
-  @ApiParameter("id", "path", {
-    description: "User ID",
-    required: true,
-    schema: { type: "integer" }
-  })
-  @ApiResponse(200, "User found", {
-    example: { id: 1, name: "John Doe", email: "john@example.com" }
-  })
-  @ApiResponse(404, "User not found")
-  async getUser(@Req() req, @Res() res) {
-    const userId = req.params.id;
-    res.json({ id: userId, name: "John Doe" });
-  }
-
-  @Post("/")
-  @ApiDoc({
-    summary: "Create new user",
-    description: "Create a new user in the system"
-  })
+class AuthController {
+  @Post("/login")
   @ApiBody({
-    description: "User data",
+    description: "Login payload",
     required: true,
-    example: {
-      name: "Jane Doe",
-      email: "jane@example.com",
-      age: 25
+    example: { email: "user@example.com", password: "secret" },
+  })
+  async login(req, res) {
+    const { email, password } = req.body;
+    if (email === "user@example.com" && password === "secret") {
+      return res.json({ token: "jwt.token.here" });
     }
-  })
-  @ApiResponse(201, "User created", {
-    example: { id: 3, name: "Jane Doe", email: "jane@example.com" }
-  })
-  @ApiResponse(400, "Invalid data")
-  async createUser(@Req() req, @Res() res) {
-    res.status(201).json({ id: 3, ...req.body });
-  }
-
-  @Put("/:id")
-  @ApiDoc({ summary: "Update user" })
-  @ApiParameter("id", "path", {
-    description: "User ID",
-    required: true,
-    schema: { type: "integer" }
-  })
-  @ApiBody({
-    description: "Updated user data",
-    example: { name: "John Updated" }
-  })
-  @ApiResponse(200, "User updated")
-  @ApiResponse(404, "User not found")
-  async updateUser(@Req() req, @Res() res) {
-    res.json({ id: req.params.id, ...req.body });
-  }
-
-  @Delete("/:id")
-  @ApiDoc({ summary: "Delete user" })
-  @ApiParameter("id", "path", {
-    description: "User ID",
-    required: true
-  })
-  @ApiResponse(204, "User deleted")
-  @ApiResponse(404, "User not found")
-  async deleteUser(@Req() req, @Res() res) {
-    res.status(204).send();
+    res.status(401).json({ error: "Invalid credentials" });
   }
 }
 ```
@@ -709,266 +320,20 @@ class UserController {
 
 ## Swagger UI Interface
 
-AzuraJS's Swagger interface offers:
+AzuraJS Swagger UI provides:
 
-### 🎨 Modern Design
-- Premium dark mode (inspired by Stripe/Vercel)
+- Modern dark mode design
 - Sidebar navigation by tags
-- Expandable cards for each endpoint
-- Syntax highlighting for code
+- Expandable endpoint cards
+- Syntax highlighting
+- Real-time search
+- Built-in **Try It Out**
+- One-click code copy
 
-### 🔍 Real-time Search
-- Search endpoints by method or path
-- Instant filtering in sidebar
-
-### 🚀 Try It Out
-- Test endpoints directly in the UI
-- Fill parameters, query strings and body
-- See response in real-time
-- Shows response time
-
-### 📋 Features
-- Copy code with one click
-- Status code visualization
-- Request/response examples
-- Type documentation
-- Badges for required/deprecated
-
-## Advanced Configuration
-
-### Multiple Servers
-
-```typescript
-setupSwaggerWithControllers(app, {
-  title: "My API",
-  version: "1.0.0",
-  servers: [
-    {
-      url: "http://localhost:3000",
-      description: "Development"
-    },
-    {
-      url: "https://api.example.com",
-      description: "Production"
-    },
-    {
-      url: "https://staging.example.com",
-      description: "Staging"
-    }
-  ]
-}, [UserController]);
-```
-
-### Security Schemes
-
-```typescript
-setupSwaggerWithControllers(app, {
-  title: "My API",
-  version: "1.0.0",
-  securitySchemes: {
-    bearerAuth: {
-      type: "http",
-      scheme: "bearer",
-      bearerFormat: "JWT",
-      description: "JWT token from /auth/login"
-    },
-    apiKey: {
-      type: "apiKey",
-      in: "header",
-      name: "X-API-Key",
-      description: "API key from dashboard"
-    },
-    oauth2: {
-      type: "oauth2",
-      flows: {
-        authorizationCode: {
-          authorizationUrl: "https://example.com/oauth/authorize",
-          tokenUrl: "https://example.com/oauth/token",
-          scopes: {
-            "read:users": "Read user data",
-            "write:users": "Modify user data"
-          }
-        }
-      }
-    }
-  }
-}, [UserController]);
-```
-
-### Contact & License
-
-```typescript
-setupSwaggerWithControllers(app, {
-  title: "My API",
-  description: "Complete API documentation",
-  version: "1.0.0",
-  contact: {
-    name: "API Support",
-    email: "support@example.com",
-    url: "https://example.com/support"
-  },
-  license: {
-    name: "MIT",
-    url: "https://opensource.org/licenses/MIT"
-  }
-}, [UserController]);
-```
-
-## Manual Setup (Advanced)
-
-If you need more control, you can configure manually:
-
-```typescript
-import { AzuraClient } from "azurajs";
-import { SwaggerIntegration, SwaggerGenerator } from "azurajs/swagger";
-import { getControllerMetadata } from "azurajs/decorators";
-
-const app = new AzuraClient();
-
-// Create generator
-const generator = new SwaggerGenerator({
-  title: "My API",
-  version: "1.0.0"
-});
-
-// Add controllers
-const metadata = getControllerMetadata(UserController);
-generator.addController(metadata.prefix, metadata.routes);
-
-// Configure Swagger routes
-const swagger = new SwaggerIntegration(generator, {
-  title: "My API",
-  version: "1.0.0"
-});
-
-app.use("/docs", swagger.getUIRoute());
-app.use("/api-spec.json", swagger.getSpecRoute());
-
-// Register controllers normally
-app.registerController(UserController);
-
-app.listen();
-```
-
-## TypeScript Types
-
-AzuraJS provides complete types for OpenAPI 3.0:
-
-```typescript
-import type {
-  OpenAPIDocument,
-  SwaggerConfig,
-  ApiDocMetadata,
-  ApiResponseMetadata,
-  ParameterObject,
-  SchemaObject
-} from "azurajs/swagger";
-
-const config: SwaggerConfig = {
-  title: "My API",
-  version: "1.0.0",
-  servers: [{ url: "http://localhost:3000" }]
-};
-```
-
-## Best Practices
-
-### 1. Use @ApiTags for Organization
-
-Group related endpoints with tags:
-
-```typescript
-@Controller("/users")
-@ApiTags("Users", "Management")
-class UserController { }
-
-@Controller("/products")
-@ApiTags("Products", "E-commerce")
-class ProductController { }
-```
-
-### 2. Provide Detailed Examples
-
-Examples help developers understand the expected format:
-
-```typescript
-@ApiBody({
-  description: "User registration data",
-  example: {
-    name: "John Doe",
-    email: "john@example.com",
-    password: "secure123",
-    preferences: {
-      newsletter: true,
-      notifications: ["email", "push"]
-    }
-  }
-})
-```
-
-### 3. Document All Status Codes
-
-Include all possible responses:
-
-```typescript
-@ApiResponse(200, "Success")
-@ApiResponse(400, "Bad request")
-@ApiResponse(401, "Unauthorized")
-@ApiResponse(403, "Forbidden")
-@ApiResponse(404, "Not found")
-@ApiResponse(500, "Server error")
-```
-
-### 4. Use Clear Descriptions
-
-Be descriptive in summaries and descriptions:
-
-```typescript
-@ApiDoc({
-  summary: "Update user profile",
-  description: "Updates the authenticated user's profile information. Only provided fields will be updated. Requires valid JWT token."
-})
-```
-
-### 5. Mark Deprecated Endpoints
-
-Inform when endpoints are deprecated:
-
-```typescript
-@Get("/old-api")
-@ApiDeprecated()
-@ApiDoc({
-  summary: "Legacy API endpoint",
-  description: "⚠️ Deprecated: Use /api/v2/endpoint instead. This endpoint will be removed in v3.0.0"
-})
-```
-
-## Troubleshooting
-
-### Documentation doesn't appear
-
-Make sure:
-1. You imported decorators from `azurajs/swagger`
-2. Decorators are applied to methods
-3. Controllers were passed to `setupSwaggerWithControllers()`
-
-### Try It Out doesn't work
-
-Check:
-1. CORS is configured correctly
-2. Server is running on the expected URL
-3. Parameters are being filled correctly
-
-### TypeScript types don't work
-
-Make sure to import types:
-
-```typescript
-import type { SwaggerConfig } from "azurajs/swagger";
-```
+---
 
 ## Next Steps
 
-- [Examples](/docs/examples) - See complete usage examples
-- [Decorators](/docs/decorators) - Learn more about decorators
-- [Controllers](/docs/controllers) - Understand how controllers work
+- [Examples](/docs/examples)
+- [Decorators](/docs/decorators)
+- [Controllers](/docs/controllers)
